...
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <navigationBar contentMode="scaleToFill" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hga-Ke-767">
                                <items>
                                    <navigationItem title="Contacts" id="T2R-4e-WRb">
                                        <barButtonItem key="leftBarButtonItem" image="picto-chat" id="Gbj-Rr-u40">
                                            <connections>
                                                <segue destination="dvO-58-Phk" kind="presentation" identifier="PresentMenuSegue" id="gAT-Um-UIQ"/>
                                            </connections>
                                        </barButtonItem>
                                    </navigationItem>
...
                                                    <constraints>
                                                        <constraint firstAttribute="width" secondItem="s6X-iS-Nut" secondAttribute="height" multiplier="1:1" id="VQW-7q-HdJ"/>
                                                    </constraints>
                                                </imageView>
                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MXB-eL-BWG">
                                                    <subviews>
                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Work" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yts-t5-Mqv">
                                                            <constraints>
                                                                <constraint firstAttribute="height" constant="16" id="jvK-nB-rK7"/>
                                                            </constraints>
                                                            <fontDescription key="fontDescription" name="HelveticaNeue-LightItalic" family="Helvetica Neue" pointSize="16"/>
                                                            <color key="textColor" red="1" green="1" blue="1" alpha="0.80000000000000004" colorSpace="custom" customColorSpace="sRGB"/>
                                                            <nil key="highlightedColor"/>
...
                                    <outlet property="dataSource" destination="dvO-58-Phk" id="I7I-3E-vnm"/>
                                    <outlet property="delegate" destination="dvO-58-Phk" id="IIw-UD-17m"/>
                                </connections>
                            </tableView>
                            <navigationBar contentMode="scaleToFill" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="s8A-P5-rKS">
                                <items>
                                    <navigationItem title="Chat" id="w6u-PD-rhN">
                                        <barButtonItem key="leftBarButtonItem" image="picto-back" id="Nop-Yc-SOJ">
                                            <connections>
                                                <segue destination="8vz-XP-ehK" kind="unwind" identifier="DismissMenuSegue" unwindAction="unwindToMainViewController:" id="d62-K6-eB0"/>
                                            </connections>
                                        </barButtonItem>
                                    </navigationItem>
...
